[package]
name = "fd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
nix = { version = "0.25.0", default-features = false, features = ["signal"] }

